Mar 21, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- released 0.9.14

Mar 20, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- load GeoIP.dat from location specified in environment variable xqf_GEOIPDAT

Mar 16, 2004: Jordi Mallach <jordi@sindominio.net>
- update Catalan and Spanish translations.

Mar 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- redesign about dialog to include logo
- unify summary in .desktop and .spec file
- change version to 0.9.13.2

Feb 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add LAN master for ut2004
- detect whether a server is ut2003 or ut2004
- update ut2004 icon

Feb 16, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- don't unset game if it's baseq3 to be able to filter for it

Feb 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- also check GamePassword rule which is used by UT2004
- add multiplay.co.uk server listing

Feb 13, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- move suggest_commands into xml file
- add support for UT2004. Someone please tell me a master server for it!

Feb 09, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- introduce GAME_ADMIN which allows to enter an rcon password without actually
  supporting rcon
- fix launching savage with password, support rcon password. Thanks Andreas
  Schneider for reporting.

Feb 08, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- allow tga as q3 mapshot

Feb 02, 2004: Jordi Mallach <jordi@sindominio.net>
- switch to intltoolize
- add desktop file for GNOME and KDE
- update Catalan translation

Jan 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add g_gear flags of Urban Terror 3.2

Jan 15, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Update danish translation (Morten Brix Pedersen)
- Update german translation

Jan 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- fix GTK2 application icon

Jan 12, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for BF1942 (wine game). Uses EYE protocol, no official master,